--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import '@fullcalendar/common/main.css';
-@import '@fullcalendar/daygrid/main.css';
-@import '@fullcalendar/timegrid/main.css';
+@import url('@fullcalendar/common/main.css');
+@import url('@fullcalendar/daygrid/main.css');
+@import url('@fullcalendar/timegrid/main.css');
+@import url('themes.css');
+@import url('chart_styles.css');
 
 @keyframes pulse {
   0%, 100% {
