--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,148 +1,23 @@
 <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-900 h-screen p-6">
-  <section class="p-8 bg-gray-900 min-h-[calc(100vh-4rem)] text-white grid grid-cols-2 p-6 gap-4" data-controller="dashboard">
+  <section class="bg-gray-900 min-h-[calc(100vh-4rem)] text-white grid grid-cols-2 p-6 gap-4" data-controller="dashboard"
+     data-dashboard-data-value="<%= @monthly_orders.to_json %>"
+     data-dashboard-options-value="<%= {
+       colors: ['#3b82f6'],
+       legend: false,
+       library: {
+         scales: {
+           x: { ticks: { color: '#ffffff' } },
+           y: { ticks: { color: '#ffffff' } }
+         }
+       }
+     }.to_json %>">
     <div class="grid grid-cols-1 gap-4">
       <div class="flex gap-4">
-        <%# primeiro card %>
-        <div class="bg-gray-800 p-4 rounded-lg flex-1">
-          <div class="flex flex-col items-center gap-2 bg-gray-700 p-2 rounded-lg">
-            <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-              <path fill-rule="evenodd" d="M12 6a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm-1.5 8a4 4 0 0 0-4 4 2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-3Zm6.82-3.096a5.51 5.51 0 0 0-2.797-6.293 3.5 3.5 0 1 1 2.796 6.292ZM19.5 18h.5a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-1.1a5.503 5.503 0 0 1-.471.762A5.998 5.998 0 0 1 19.5 18ZM4 7.5a3.5 3.5 0 0 1 5.477-2.889 5.5 5.5 0 0 0-2.796 6.293A3.501 3.501 0 0 1 4 7.5ZM7.1 12H6a4 4 0 0 0-4 4 2 2 0 0 0 2 2h.5a5.998 5.998 0 0 1 3.071-5.238A5.505 5.505 0 0 1 7.1 12Z" clip-rule="evenodd"/>
-            </svg>
-            <h3 class="text-lg font-semibold">Clientes Ativos</h3>
-            <div class="text-center">
-                <p class="text-2xl font-bold"><%#= Client.count %>100</p>
-                <div class="grid grid-cols-2 gap-4">
-                <div>
-                  <p class="text-sm">Clientes do mês</p>
-                  <p class="text-green-400"><%#= @attended_clients_count %></p>
-                </div>
-                <div>
-                  <p class="text-sm">Clientes atendidos hoje</p>
-                    <p class="text-green-400"><%#= @today_clients_count %></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <%# segundo card %>
-        <div class="bg-gray-800 p-4 rounded-lg flex-1">
-          <div class="flex flex-col items-center gap-2 bg-gray-700 p-2 rounded-lg">
-        <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8 7V6a1 1 0 0 1 1-1h11a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1M3 18v-7a1 1 0 0 1 1-1h11a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1Zm8-3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"/>
-        </svg>
-        <h3 class="text-lg font-semibold">Novos Pedidos</h3>
-        <div class="text-center">
-          <p class="text-2xl font-bold">2,100</p>
-          <p class="text-red-400">⬇ 3.20%</p>
-          <div class="mt-2">
-            <p class="text-sm">Total em Vendas</p>
-            <p class="text-xl font-bold text-green-400">R$ 45.000,00</p>
-          </div>
-        </div>
-          </div>
-        </div>
+        <%= render "admin/dashboard/partials/propostas", today_clients_count: @today_clients_count %>
+        <%= render "admin/dashboard/partials/vendas" %>
       </div>
-      <%# card inferior %>
-        <div class="bg-gray-800 p-4 rounded-lg flex-1">
-          <div class="grid grid-cols-1 gap-4">
-            <div class="grid grid-cols-2 gap-4">
-              <div class="bg-gray-700 p-2 rounded-lg">
-                <div class="flex items-center gap-2">
-                  <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                    <path fill-rule="evenodd" d="M12 6a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm-1.5 8a4 4 0 0 0-4 4 2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-3Zm6.82-3.096a5.51 5.51 0 0 0-2.797-6.293 3.5 3.5 0 1 1 2.796 6.292ZM19.5 18h.5a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-1.1a5.503 5.503 0 0 1-.471.762A5.998 5.998 0 0 1 19.5 18ZM4 7.5a3.5 3.5 0 0 1 5.477-2.889 5.5 5.5 0 0 0-2.796 6.293A3.501 3.501 0 0 1 4 7.5ZM7.1 12H6a4 4 0 0 0-4 4 2 2 0 0 0 2 2h.5a5.998 5.998 0 0 1 3.071-5.238A5.505 5.505 0 0 1 7.1 12Z" clip-rule="evenodd"/>
-                  </svg>
-                  <h3 class="text-lg font-semibold">Clientes Ativos</h3>
-                </div>
-                <div>
-                  <p class="text-xl font-bold">{count}</p>
-                  <p class="text-green-400">{porcentagem}</p>
-                </div>
-              </div>
-              <div class="bg-gray-700 p-2 rounded-lg">
-                <div class="flex items-center gap-2">
-                  <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
-                  </svg>
-                  <h3 class="text-lg font-semibold">New task</h3>
-                </div>
-                <div>
-                  <p class="text-xl font-bold">50</p>
-                  <p class="text-green-400">+5%</p>
-                </div>
-              </div>
-            </div>
-            <div class="bg-gray-700 p-4 rounded-lg">
-              <h3 class="text-lg font-semibold">Estatísticas Gerais</h3>
-              <p>Aqui você pode adicionar gráficos ou informações mais detalhadas.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <%# card principal de acompanhamento %>
-      <div class="rounded-2xl border border-gray-200 bg-gray-100 dark:border-gray-800 dark:bg-white/[0.03]">
-        <div class="shadow-default rounded-2xl bg-white px-5 pb-11 pt-5 dark:bg-gray-900 sm:px-6 sm:pt-6">
-          <div class="flex justify-between">
-            <div>
-              <h3 class="text-lg font-semibold text-gray-800 dark:text-white/90">
-                Status do Sistema
-              </h3>
-              <p class="mt-1 text-theme-sm text-gray-500 dark:text-gray-400">
-                Métricas de performance mensal
-              </p>
-            </div>
-            <div x-data="{openDropDown: false}" class="relative h-fit">
-              <button @click="openDropDown = !openDropDown" class="text-gray-400 hover:text-gray-700 dark:hover:text-white">
-                <svg class="fill-current" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2441 6C10.2441 5.0335 11.0276 4.25 11.9941 4.25H12.0041C12.9706 4.25 13.7541 5.0335 13.7541 6C13.7541 6.9665 12.9706 7.75 12.0041 7.75H11.9941C11.0276 7.75 10.2441 6.9665 10.2441 6ZM10.2441 18C10.2441 17.0335 11.0276 16.25 11.9941 16.25H12.0041C12.9706 16.25 13.7541 17.0335 13.7541 18C13.7541 18.9665 12.9706 19.75 12.0041 19.75H11.9941C11.0276 19.75 10.2441 18.9665 10.2441 18ZM11.9941 10.25C11.0276 10.25 10.2441 11.0335 10.2441 12C10.2441 12.9665 11.0276 13.75 11.9941 13.75H12.0041C12.9706 13.75 13.7541 12.9665 13.7541 12C13.7541 11.0335 12.9706 10.25 12.0041 10.25H11.9941Z"/>
-                </svg>
-              </button>
-            </div>
-          </div>
-          <div class="relative max-h-[195px]">
-            <div id="chartTwo" class="h-full" style="min-height: 229px;"></div>
-            <span class="absolute left-1/2 top-[85%] -translate-x-1/2 -translate-y-[85%] rounded-full bg-success-50 px-3 py-1 text-xs font-medium text-success-600 dark:bg-success-500/15 dark:text-success-500">+15%</span>
-          </div>
-          <p class="mx-auto mt-1.5 w-full max-w-[380px] text-center text-sm text-gray-500 sm:text-base">
-            Sistema operando com performance superior ao mês anterior
-          </p>
-        </div>
-
-        <div class="flex items-center justify-center gap-5 px-6 py-3.5 sm:gap-8 sm:py-5">
-          <div>
-            <p class="mb-1 text-center text-theme-xs text-gray-500 dark:text-gray-400 sm:text-sm">Uptime</p>
-            <p class="flex items-center justify-center gap-1 text-base font-semibold text-gray-800 dark:text-white/90 sm:text-lg">
-              99.9%
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.60141 2.33683C7.73885 2.18084 7.9401 2.08243 8.16435 2.08243C8.16475 2.08243 8.16516 2.08243 8.16556 2.08243C8.35773 2.08219 8.54998 2.15535 8.69664 2.30191L12.6968 6.29924C12.9898 6.59203 12.9899 7.0669 12.6971 7.3599C12.4044 7.6529 11.9295 7.65306 11.6365 7.36027L8.91435 4.64004L8.91435 13.5C8.91435 13.9142 8.57856 14.25 8.16435 14.25C7.75013 14.25 7.41435 13.9142 7.41435 13.5L7.41435 4.64442L4.69679 7.36025C4.4038 7.65305 3.92893 7.6529 3.63613 7.35992C3.34333 7.06693 3.34348 6.59206 3.63646 6.29926L7.60141 2.33683Z" fill="#039855"/>
-              </svg>
-            </p>
-          </div>
-
-          <div class="h-7 w-px bg-gray-200 dark:bg-gray-800"></div>
-
-          <div>
-            <p class="mb-1 text-center text-theme-xs text-gray-500 dark:text-gray-400 sm:text-sm">Performance</p>
-            <p class="flex items-center justify-center gap-1 text-base font-semibold text-gray-800 dark:text-white/90 sm:text-lg">
-              95%
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.60141 2.33683C7.73885 2.18084 7.9401 2.08243 8.16435 2.08243C8.16475 2.08243 8.16516 2.08243 8.16556 2.08243C8.35773 2.08219 8.54998 2.15535 8.69664 2.30191L12.6968 6.29924C12.9898 6.59203 12.9899 7.0669 12.6971 7.3599C12.4044 7.6529 11.9295 7.65306 11.6365 7.36027L8.91435 4.64004L8.91435 13.5C8.91435 13.9142 8.57856 14.25 8.16435 14.25C7.75013 14.25 7.41435 13.9142 7.41435 13.5L7.41435 4.64442L4.69679 7.36025C4.4038 7.65305 3.92893 7.6529 3.63613 7.35992C3.34333 7.06693 3.34348 6.59206 3.63646 6.29926L7.60141 2.33683Z" fill="#039855"/>
-              </svg>
-            </p>
-          </div>
-
-          <div class="h-7 w-px bg-gray-200 dark:bg-gray-800"></div>
-
-          <div>
-            <p class="mb-1 text-center text-theme-xs text-gray-500 dark:text-gray-400 sm:text-sm">Disponibilidade</p>
-            <p class="flex items-center justify-center gap-1 text-base font-semibold text-gray-800 dark:text-white/90 sm:text-lg">
-              100%
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.60141 2.33683C7.73885 2.18084 7.9401 2.08243 8.16435 2.08243C8.16475 2.08243 8.16516 2.08243 8.16556 2.08243C8.35773 2.08219 8.54998 2.15535 8.69664 2.30191L12.6968 6.29924C12.9898 6.59203 12.9899 7.0669 12.6971 7.3599C12.4044 7.6529 11.9295 7.65306 11.6365 7.36027L8.91435 4.64004L8.91435 13.5C8.91435 13.9142 8.57856 14.25 8.16435 14.25C7.75013 14.25 7.41435 13.9142 7.41435 13.5L7.41435 4.64442L4.69679 7.36025C4.4038 7.65305 3.92893 7.6529 3.63613 7.35992C3.34333 7.06693 3.34348 6.59206 3.63646 6.29926L7.60141 2.33683Z" fill="#039855"/>
-              </svg>
-            </p>
-          </div>
-        </div>
-      </div>
+      <%= render "admin/dashboard/partials/status" %>
     </div>
+    <%= render "admin/dashboard/partials/status_do_sistema" %>
   </section>
 </main>
