--- a/app/views/public/pages/contato.html.erb
+++ b/app/views/public/pages/contato.html.erb
@@ -1,80 +1,81 @@
 <div class="bg-white p-1 dark:bg-gray-900">
   <div class="container p-12 px-6 py-12 mx-auto">
     <%# Seção Principal - Formulário e Mapa %>
-    <div class="grid grid-cols-2 gap-6 lg:grid-cols-2 gap-8">
+    <div class="grid grid-cols-2 gap-6 lg:grid-cols-2">
       <%# Coluna do Formulário %>
       <div class="w-full">
-        <div class="w-full p-12 px-8 py-10 overflow-hidden bg-purple-900 rounded-lg shadow-2xl">
-          <h1 class="text-2xl text-center font-semibold text-white capitalize mb-6">Entre em Contato</h1>
-          
-          <div class="sm:mx-auto p-8 sm:w-full">
-            <%= form_with(model: @contact_message, local: true, class: "space-y-6") do |f| %>
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div>
-                  <%= f.label :name, "Nome", class: "block text-sm font-medium text-gray-100" %>
-                  <div class="mt-2">
-                    <%= f.text_field :name, required: true, placeholder: "",
-                        class: "block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
-                  </div>
-                </div>
+      <div class="w-full p-12 px-8 py-10 overflow-hidden bg-purple-900 rounded-lg shadow-2xl">
+      <h1 class="text-2xl text-center font-semibold text-white capitalize mb-6">Entre em Contato</h1>
+      
+      <div class="sm:mx-auto p-8 sm:w-full">
+      <%= form_with(model: @contact_message, local: true, class: "space-y-6") do |f| %>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <div>
+      <%= f.label :name, "Nome", class: "block text-sm font-bold text-gray-100" %>
+      <div class="mt-2">
+      <%= f.text_field :name, required: true, placeholder: "",
+        class: "block w-full appearance-none rounded-md border border-purple-900 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
+      </div>
+      </div>
 
-                <div>
-                  <%= f.label :email, "Email", class: "block text-sm font-medium text-gray-100" %>
-                  <div class="mt-2">
-                    <%= f.email_field :email, required: true, placeholder: "",
-                        class: "block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
-                  </div>
-                </div>
+      <div>
+      <%= f.label :email, "Email", class: "block text-sm font-bold text-gray-100" %>
+      <div class="mt-2">
+      <%= f.email_field :email, required: true, placeholder: "",
+        class: "block w-full appearance-none rounded-md border border-purple-900 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
+      </div>
+      </div>
 
-                <div>
-                  <%= f.label :phone, "Telefone", class: "block text-sm font-medium text-gray-100" %>
-                  <div class="mt-2">
-                    <%= f.telephone_field :phone, required: true, placeholder: "",
-                        class: "block w-full appearance-none rounded-md border border-purple-900 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
-                  </div>
-                </div>
+      <div>
+      <%= f.label :phone, "Telefone", class: "block text-sm font-bold text-gray-100" %>
+      <div class="mt-2">
+      <%= f.telephone_field :phone, required: true, placeholder: "",
+        class: "block w-full appearance-none rounded-md border border-purple-900 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
+      </div>
+      </div>
 
-                <div>
-                  <%= f.label :request_type, "Tipo de Solicitação", class: "block text-sm font-medium text-gray-100" %>
-                  <div class="mt-2">
-                    <%= f.select :request_type,
-                        ContactMessage.request_types,
-                        { include_blank: "" },
-                        class: "block w-full appearance-none rounded-lg border border-gray-300 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
-                  </div>
-                </div>
-              </div>
+      <div>
+      <%= f.label :request_type, "Tipo de Solicitação", class: "block text-sm font-bold text-gray-100" %>
+      <div class="mt-2">
+      <%= f.select :request_type,
+        ContactMessage.request_types,
+        { include_blank: "" },
+        class: "block w-full appearance-none rounded-lg border border-purple-900 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
+      </div>
+      </div>
+      </div>
 
-              <div>
-                <%= f.label :message, "Mensagem", class: "block text-sm font-medium text-gray-100" %>
-                <div class="mt-2">
-                  <%= f.text_area :message, rows: 4,
-                      class: "block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
-                </div>
-              </div>
+      <div>
+      <%= f.label :message, "Mensagem", class: "block text-sm font-bold text-gray-100" %>
+      <div class="mt-2">
+      <%= f.text_area :message, rows: 4,
+        class: "block w-full appearance-none rounded-md border border-purple-900 px-3 py-2 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm bg-purple-900 backdrop-blur-sm shadow-purple-500/50 text-white" %>
+      </div>
+      </div>
 
-              <div class="text-center mt-6">
-                <%= f.submit "Enviar mensagem",
-                    class: "w-full justify-center rounded-md bg-indigo-600 px-3 py-3 text-base font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
-              </div>
-            <% end %>
-          </div>
-        </div>
+      <div class="text-center mt-6">
+      <%= f.submit "Enviar mensagem",
+      class: "w-full justify-center rounded-md bg-indigo-600 px-3 py-3 text-base font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
+      </div>
+      <% end %>
+      </div>
+      </div>
       </div>
 
       <%# Coluna do Mapa %>
       <div class="w-full">
-        <div class="overflow-hidden rounded-lg h-full min-h-[400px]">
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.2245100882706!2d-38.48501702502597!3d-3.761247696212636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74602d5b6f067%3A0xd809a77e8dccbb55!2sAv.%20Washington%20Soares%2C%20855%20-%20704%20-%20Guararapes%2C%20Fortaleza%20-%20CE%2C%2060811-341!5e0!3m2!1spt-BR!2sbr!4v1739928653843!5m2!1spt-BR!2sbr"
-            width="100%" 
-            height="100%" 
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-        </div>
+      <div class="overflow-hidden rounded-lg h-full min-h-[400px]">
+      <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1104.7944721791798!2d-38.483007154766455!3d-3.7610121146723183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c747acdba79311%3A0xff5df110565b2dd7!2sEmpresarial%20Washington%20Soares!5e0!3m2!1spt-BR!2sbr!4v1741305854682!5m2!1spt-BR!2sbr"
+      width="100%" 
+      height="100%" 
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      sandbox="allow-scripts allow-same-origin allow-popups"
+      referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+      </div>
       </div>
     </div>
 
@@ -88,15 +89,15 @@
       },
       {
         icon: 'M15 10.5a3 3 0 11-6 0 3 3 0 016 0z M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z',
-        title: 'Office',
-        description: 'Come say hello at our office HQ.',
-        contact: '100 Smith Street Collingwood VIC 3066 AU'
+        title: 'Escritório',
+        description: 'Venha nos visitar em nosso escritório.',
+        contact: 'Av. Washington Soares, 855 - 704 - Edson Queiroz'
       },
       {
         icon: 'M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z',
-        title: 'Phone',
-        description: 'Mon-Fri from 8am to 5pm.',
-        contact: '+1 (555) 000-0000'
+        title: 'Telefone',
+        description: 'Seg-Sex das 8h às 17h.',
+        contact: '(85) 3025-2936'
       }
     ] %>
 
