--- a/app/views/shared/_nav_menu.html.erb
+++ b/app/views/shared/_nav_menu.html.erb
@@ -23,34 +23,38 @@
 <% if flowbite_style %>
   <% if mobile %>
     <% menu_items[:flowbite].each_with_index do |item, i| %>
-      <li class="p-2">
+      <li class="">
         <%= link_to item[:title], 
             item[:path], 
-            class: "block py-2.5 px-4 text-white text-center font-medium text-lg
+            class: "block py-2 px-3 text-white text-center font-medium text-base
                    #{i == 0 ? 'bg-purple-700' : ''}
                    rounded-lg transition-all duration-200 ease-in-out
-                   hover:bg-purple-600 hover:scale-105 hover:shadow-lg" %>
+                   hover:bg-purple-600 hover:scale-105 hover:shadow-lg
+                   whitespace-nowrap" %>
       </li>
     <% end %>
   <% else %>
-    <div class="flex justify-center items-center space-x-4 mx-auto p-2 space-around">
+    <div class="flex justify-center items-center gap-2 md:gap-4 mx-auto p-2 overflow-x-auto max-w-screen-xl">
       <% menu_items[:flowbite].each do |item| %>
         <%= link_to item[:path], 
-            class: "block py-2.5 px-4 text-white rounded-lg
+            class: "block py-2 px-3 md:px-4 text-white rounded-lg
                    transition-all duration-200 ease-in-out
                    hover:bg-purple-600/90 hover:scale-105 hover:shadow-lg
-                   text-center font-medium text-lg" do %>
+                   text-center font-medium text-base md:text-lg
+                   whitespace-nowrap shrink-0" do %>
           <%= item[:title] %>
         <% end %>
       <% end %>
     </div>
   <% end %>
 <% else %>
-  <ul class="<%= mobile ? 'flex flex-col space-y-2 p-2' : 'flex space-x-4 p-2 space-around' %>">
+  <ul class="<%= mobile ? 'flex flex-col gap-2 p-2' : 'flex gap-4 p-2 overflow-x-auto max-w-screen-xl mx-auto' %>">
     <% menu_items[:standard].each do |link| %>
-      <li class="p-2">
+      <li class="shrink-0">
         <%= link_to link[:path], 
-            class: "block px-4 py-2 text-white hover:bg-purple-700 rounded-lg transition-colors duration-200" do %>
+            class: "block px-3 md:px-4 py-2 text-white hover:bg-purple-700 rounded-lg 
+                   transition-colors duration-200 whitespace-nowrap 
+                   text-base md:text-lg" do %>
           <%= link[:title] %>
         <% end %>
       </li>
