--- a/app/views/shared/_user_dropdown_content.html.erb
+++ b/app/views/shared/_user_dropdown_content.html.erb
@@ -7,46 +7,19 @@
 <% link_class = "block px-4 py-2 #{mobile ? 'text-white hover:bg-purple-700 rounded-md text-lg' : 
                                             'hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white text-base'}" %>
 
-<div class="<%= dropdown_class %>" <%= mobile ? "" : 'data-dropdown-target="content"' %>>
-  <% if !mobile %>
-    <div class="px-4 py-3 text-base text-gray-900 dark:text-white border-b">
-      <div class="font-medium"><%= current_user.name %></div>
-      <div class="truncate"><%= current_user.email %></div>
-    </div>
-  <% end %>
-  
-  <ul class="py-2 <%= mobile ? 'text-lg text-white' : 'text-base text-gray-700 dark:text-gray-200' %>">
-    <% if defined?(dashboard_path) %>
-      <li>
-        <%= link_to dashboard_path, class: link_class do %>
-          <div class="flex items-center">
-            <svg class="<%= mobile ? 'w-5 h-5 mr-2' : 'w-4 h-4 mr-2' %>" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
-            </svg>
-            Dashboard
-          </div>
-        <% end %>
-      </li>
-    <% end %>
+<div class="<%= mobile ? 'mt-2' : 'absolute right-0 top-full mt-2' %> z-10 bg-purple-900 divide-y divide-purple-800 rounded-lg shadow-lg w-48">
+  <ul class="py-2 text-sm text-white">
     <li>
-      <%= link_to edit_user_registration_path, class: link_class do %>
-        <div class="flex items-center">
-          <svg class="<%= mobile ? 'w-5 h-5 mr-2' : 'w-4 h-4 mr-2' %>" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-          </svg>
-          Perfil
-        </div>
-      <% end %>
+      <%= link_to "Dashboard", admin_dashboard_index_path, class: "block px-4 py-2 hover:bg-purple-800" %>
+    </li>
+    <li>
+      <%= link_to "Perfil", edit_user_registration_path, class: "block px-4 py-2 hover:bg-purple-800" %>
+    </li>
+    <li>
+      <%= link_to "Configurações", settings_admin_pages_path, class: "block px-4 py-2 hover:bg-purple-800" %>
+    </li>
+    <li>
+      <%= button_to "Sair", destroy_user_session_path, method: :delete, class: "w-full text-left block px-4 py-2 hover:bg-purple-800 text-red-300" %>
     </li>
   </ul>
-  <div class="<%= mobile ? 'border-t border-purple-300/20' : 'py-1' %>">
-    <%= button_to destroy_user_session_path, method: :delete, class: "block w-full text-left px-4 py-2 #{mobile ? 'text-white hover:bg-red-600/50 rounded-md text-lg' : 'text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white'}" do %>
-      <div class="flex items-center">
-        <svg class="<%= mobile ? 'w-5 h-5 mr-2' : 'w-4 h-4 mr-2' %>" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
-        </svg>
-        Sair
-      </div>
-    <% end %>
-  </div>
 </div>
